<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_color"
              android:clickable="false"
              android:orientation="vertical"
              android:paddingBottom="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              tools:context=".Fragments.PostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title"
            android:maxLines="1"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/post_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description"
            android:lines="4"
            android:maxEms="4"
            android:maxHeight="@dimen/two_hundred"
            android:maxLines="4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/post_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/fifteen"
        android:layout_marginTop="@dimen/fifteen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date_text"/>

        <Button
            android:id="@+id/start_date_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@color/accent_color"
            android:textColor="@color/white_color"
            tools:text="8/23/17"/>

        <TextView
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/end_date_text"/>

        <Button
            android:id="@+id/end_date_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@color/accent_color"
            android:textColor="@color/white_color"
            tools:text="9/1/17"
            />

    </LinearLayout>
    <!-- WILL BE REPLACED WITH MINI RECYCLERVIEW OR REGULAR SIZE
     IF REG SIZE THEN WE NEED A NESTEDSCROLLVIEW-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/post_image_holder1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:src="@drawable/image_holder"/>

        <ImageView
            android:id="@+id/post_image_holder2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@id/post_image_holder1"
            android:layout_toRightOf="@id/post_image_holder1"
            android:clickable="true"
            android:src="@drawable/image_holder"/>

        <ImageView
            android:id="@+id/post_image_holder3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_toEndOf="@id/post_image_holder2"
            android:layout_toRightOf="@id/post_image_holder2"
            android:clickable="true"
            android:src="@drawable/image_holder"/>

        <ImageView
            android:id="@+id/edit_icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_photo_icon"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/edit_icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/post_image_holder1"
            android:layout_toRightOf="@id/post_image_holder1"
            android:src="@drawable/edit_photo_icon"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/edit_icon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/post_image_holder2"
            android:layout_toRightOf="@id/post_image_holder2"
            android:src="@drawable/edit_photo_icon"
            android:visibility="invisible"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/five"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <!--<Button-->
            <!--android:id="@+id/post_back_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:background="@color/accent_color"-->
            <!--android:clickable="true"-->
            <!--android:paddingBottom="10dp"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:paddingRight="10dp"-->
            <!--android:paddingTop="10dp"-->
            <!--android:text="@string/go_back"-->
            <!--android:textAllCaps="false" />-->

            <Button
                android:id="@+id/preview_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/accent_color"
                android:clickable="true"
                android:paddingBottom="@dimen/ten"
                android:paddingLeft="@dimen/ten"
                android:paddingRight="@dimen/ten"
                android:paddingTop="@dimen/ten"
                android:text="@string/preview_post"
                android:textColor="@color/white_color"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@color/accent_color"
                android:clickable="true"
                android:paddingBottom="@dimen/ten"
                android:paddingLeft="@dimen/ten"
                android:paddingRight="@dimen/ten"
                android:paddingTop="@dimen/ten"
                android:text="@string/post_sale"
                android:textColor="@color/white_color"
                android:textAllCaps="false"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
